kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-app
  labels:
    app: tasky-app
spec:
  selector:
    app: tasky-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
